@@ -18,6 +18,12 @@
    implemented.
 ** specification compliance: DISPLAY-COMMAND-MENU function now
    implemented.
+** specification compliance: POINTER-PLACE-RUBBER-BAND-LINE* function
+   now implemented.
+** specification compliance: POINTER-INPUT-RECTANGLE* function now
+   implemented.
+** specification compliance: POINTER-INPUT-RECTANGLE function now
+   implemented.
 
 * Changes in mcclim-0.9.3 "All Souls' Day" relative to 0.9.2:
 ** backend improvement: The Null backend now registers itself in the
